* Changing slf4j to apache log4j, slf4j doesn't seem to load at runtime